[gd_scene load_steps=9 format=2]

[ext_resource path="res://addons/Player3D_FP/Player.gd" type="Script" id=1]

[sub_resource type="CapsuleShape" id=1]
radius = 0.2
height = 1.2

[sub_resource type="SphereShape" id=2]
radius = 30.0

[sub_resource type="SphereShape" id=3]
radius = 15.0

[sub_resource type="CapsuleMesh" id=4]
radius = 0.22
mid_height = 0.8
radial_segments = 10
rings = 3

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0, 1, 0, 1 )

[sub_resource type="SphereMesh" id=6]
radius = 0.18
height = 0.4
radial_segments = 10
rings = 10

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0, 1, 0, 1 )

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="Capsule" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, -1, 0, 1, -4.37114e-008, 0, 0.85, 0 )
shape = SubResource( 1 )

[node name="Kopf" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4, 0 )

[node name="Camera" type="Camera" parent="Kopf"]
editor/display_folded = true
far = 500.0

[node name="rayInteract" type="RayCast" parent="Kopf/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -1 )

[node name="Hand" type="Spatial" parent="Kopf/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.666 )

[node name="rayTop" type="RayCast" parent="Kopf"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.265458, -0.00209439 )
enabled = true
cast_to = Vector3( 0, 1, 0 )
collide_with_areas = true

[node name="rayStair" type="RayCast" parent="Kopf"]
transform = Transform( 1, 0, 0, 0, 0.866025, -0.5, 0, 0.5, 0.866025, 0, -0.600532, -0.052 )
enabled = true
cast_to = Vector3( 0, -0.8, 0 )

[node name="rayStair2" type="RayCast" parent="Kopf"]
transform = Transform( -0.999375, -0.0353356, -7.57104e-008, -0.0306015, 0.865485, -0.5, 0.0176679, -0.499688, -0.866026, 0, -0.619436, 0.024657 )
enabled = true
cast_to = Vector3( 0, -0.8, 0 )

[node name="LOD_mid" type="Area" parent="Kopf"]
editor/display_folded = true
input_ray_pickable = false

[node name="CollisionShape" type="CollisionShape" parent="Kopf/LOD_mid"]
shape = SubResource( 2 )

[node name="LOD_high" type="Area" parent="Kopf"]
editor/display_folded = true
input_ray_pickable = false

[node name="CollisionShape" type="CollisionShape" parent="Kopf/LOD_high"]
shape = SubResource( 3 )

[node name="lblAction" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -63.0
margin_top = -20.0
margin_bottom = -6.0
rect_scale = Vector2( 2, 2 )
size_flags_stretch_ratio = 0.0
align = 1

[node name="Visible" type="Spatial" parent="."]

[node name="Body" type="MeshInstance" parent="Visible"]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, -1, 0, 1, -4.37114e-008, 0, 0.671966, 0 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="Head" type="MeshInstance" parent="Visible"]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, -1, 0, 1, -4.37114e-008, 0, 1.40564, -0.0780338 )
mesh = SubResource( 6 )
material/0 = SubResource( 7 )
[connection signal="area_entered" from="Kopf/LOD_mid" to="." method="_on_area_entered_mid"]
[connection signal="area_exited" from="Kopf/LOD_mid" to="." method="_on_area_exit_mid"]
[connection signal="area_entered" from="Kopf/LOD_high" to="." method="_on_area_entered_high"]
[connection signal="area_exited" from="Kopf/LOD_high" to="." method="_on_area_exit_high"]
